--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@
 
 cmake_minimum_required(VERSION 3.5...3.16)
 
-project(boost_pfr VERSION "${BOOST_SUPERPROJECT_VERSION}" LANGUAGES CXX)
+project(boost_pfr_dev VERSION "${BOOST_SUPERPROJECT_VERSION}" LANGUAGES CXX)
 
-add_library(boost_pfr INTERFACE)
-add_library(Boost::pfr ALIAS boost_pfr)
+add_library(boost_pfr_dev INTERFACE)
+add_library(Boost::pfr_dev ALIAS boost_pfr_dev)
 
-target_include_directories(boost_pfr INTERFACE include)
+target_include_directories(boost_pfr_dev INTERFACE include)
 
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.28.0" AND BUILD_MODULE)
     add_subdirectory(module)
